Closed Bug 1957617 Opened 7 months ago Closed 7 months ago

Ignore OS zoom when computing DPR in RFP

Categories

(Core :: Privacy: Anti-Tracking, defect, P3)

defect

Tracking

()

RESOLVED FIXED
139 Branch
Tracking Status
firefox139 --- fixed

People

(Reporter: fkilic, Assigned: fkilic)

References

Details

Attachments

(1 file)

As discussed in bug 1954493, OS's text scaling might leak into nsPresContext's zoom level. We should ignore it to not increase fingerprintability.

Pushed by fkilic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1fc42008acc7 Ignore OS zoom when computing DPR in RFP. r=pierov,tjr
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 139 Branch
QA Whiteboard: [qa-triage-done-c140/b139]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: