Bug 1957617: Ignore OS zoom when computing DPR in RFP. r=pierov,tjr

Differential Revision: https://phabricator.services.mozilla.com/D243820